--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,15 @@
                 <div class="corner-lines bottom-left"></div>
                 <div class="corner-lines bottom-right"></div>
             </div>
-            <video id="video" autoplay height=600 width=800></video>
-            <canvas id="canvas" height=210 width=320></canvas>
+            <video id="video" autoplay width="600" height="200"></video>
+            <canvas id="canvas" height="210" width="320"></canvas>
             <br>
             <button id="capture"><i class="fas fa-camera"></i> Capture Image</button>
+            <button id="ResetMe">Reset</button>
         </div>
         <div class="solution-wrapper">
             <p id="solution"></p>
+            <p id="youtube-link"></p> <!-- Added YouTube Link Section -->
         </div>
     </div>
     <footer class="footer">
